--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   },
   "dependencies": {
     "remark-custom-blocks": "^2.2.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.13.0"
   }
 }
