--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "inkdrop": "^4.x"
   },
   "dependencies": {
+    "core-js": "^2.6.11",
     "remark-custom-blocks": "^2.2.3"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-plugin-react": "^7.13.0"
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "prettier": "^1.18.2"
   }
 }
